Opened 8 years ago

Closed 8 years ago

#13134 closed bug (fixed)

[Patch] servers/app/drawing/interface/remote/RemoteMessage.cpp: fix memory leak

Reported by: mt Owned by: axeld
Priority: normal Milestone: Unscheduled
Component: Servers/app_server Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

In RemoteMessage::ReadGradient(), memory allocated to 'gradient' could leak at line 506 [1].

[1] http://cgit.haiku-os.org/haiku/tree/src/servers/app/drawing/interface/remote/RemoteMessage.cpp#n506

Attachments (2)

0040-RemoteMessage.cpp-fix-memory-leak.patch (889 bytes ) - added by mt 8 years ago.
report-193619.html (58.3 KB ) - added by mt 8 years ago.
Report by Clang Static Analyzer

Download all attachments as: .zip

Change History (4)

comment:1 by mt, 8 years ago

patch: 01

by mt, 8 years ago

Attachment: report-193619.html added

Report by Clang Static Analyzer

comment:2 by pulkomandy, 8 years ago

Resolution: fixed
Status: newclosed

Applied in hrev50813. Thanks!

Note: See TracTickets for help on using tickets.